Add content about Jenna Ortega to index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>Jenna Ortega</h1>
+    <img src="https://th.bing.com/th/id/OIP._31szQJXdXucXxzjzoCvsAHaLI?w=203&h=306&c=7&r=0&o=7&cb=ucfimg2&pid=1.7&rm=3&ucfimg=1" alt="Jenna Ortega">
+    <p>My Girl</p>
+    <p>Jenna    Ortega is an American actress known for her roles in various television series and films. She has gained recognition for her performances in shows like "Jane the Virgin" and "You," as well as movies such as "The Fallout" and "Scream 5." Ortega is celebrated for her versatility and talent in portraying diverse characters.</p>
 </body>
 </html>
